@@ -1389,6 +1389,10 @@ nuttx-0.4.6 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  number of bits per word is greater an 8 (such as with many 9-bit display
 	  interfaces). -- this might have broken a few things which will need to
 	  be retested!
+	* arch/arm/src/imx: Added i.MX SPI driver
+	* SPI: Add a method to set the number of bits per word.  Also add an
+	  alternative interface for so that (eventually) I can phase the sndblock
+	  and recvblock methods and replace them with a single exchange method
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
